# completion-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml
src/: enum_.rs  main.rs  parser.rs
